--- a/prep_1.ipynb
+++ b/prep_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdIv9ZSIOtdqCc0QcOSbmt",
+      "authorship_tag": "ABX9TyMJ+T4P0kxxYPS18bffGLZx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "VW66QhSV9uqs"
+        "id": "VW66QhSV9uqs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "068459b6-df71-45b3-8884-79fb5766e273"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Python\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Hello Python\")"
+      ]
     }
   ]
 }
